Update supervised_learning_flow_4 .ipynb

--- a/supervised_learning_flow_4 .ipynb
+++ b/supervised_learning_flow_4 .ipynb
@@ -578,8 +578,7 @@
     "#EDA #2 (same as the one above with different features)\n",
     "display(df_train[['MedInc','MedHouseVal']])\n",
     "fig2, ax2 = plt.subplots()\n",
-    "combined_data = pd.concat([df_train['MedInc'],df_train['MedHouseVal']],ignore_index=True)\n",
-    "ax2.hist(combined_data,edgecolor='black')\n",
+    "ax2.scatter(df_train['MedInc'],df_train['MedHouseVal'])\n",
     "ax2.set_xlabel('MedInc')\n",
     "ax2.set_ylabel('MedHouseVal')\n",
     "ax2.set_title('MedInc vs MedHouseVal')\n",
